<resources>
    <string name="app_name">FoodisTaan</string>
    <string name="foodistaan">FOODISTAAN</string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="don_t_have_an_account_sign_up_now"><u>Don\'t have an account? Sign up now</u></string>
    <string name="name_min_3_characters">Name (min 3 characters)</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password (Min 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_registered_mobile_number_and_email_address_for_delicious_foods">Enter your registered Mobile Number and Email Address for Delicious FOODS</string>
    <string name="next">NEXT</string>
    <string name="enter_the_received_otp_below">Enter the received OTP below</string>
    <string name="otp_4_characters">OTP (4 characters)</string>
    <string name="new_password_min_4_characters">New Password (Min 4 characters)</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurant">Favourite Restaurant</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log Out</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="mobile_number_should_be_of_10_numbers">mobile number should be of 10 numbers</string>
    <string name="please_fill_the_required_fields">Please fill the required fields</string>
    <string name="preference_register_file">Registration Preferences</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rupee">\u20B9</string>
    <string name="search_hint">Search</string>
    <string name="my_previous_pet_puja">My Previous Pet Puja</string>
    <string name="no_favourites">No Favourites!!!</string>
    <string name="navigation_drawer">Navigation Drawer</string>
</resources>