<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item
        android:title="@string/home"
        android:id="@+id/homes"
        android:icon="@drawable/ic_home"/>
    <item
        android:title="@string/my_profile"
        android:id="@+id/myProfile"
        android:icon="@drawable/ic_person"/>
    <item
        android:title="@string/favourite_restaurant"
        android:id="@+id/favouriteRestaurant"
        android:icon="@drawable/ic_favourite"/>
    <item
        android:title="@string/order_history"
        android:id="@+id/orderHistory"
        android:icon="@drawable/ic_history"/>
    <item
        android:title="@string/faqs"
        android:id="@+id/faqs"
        android:icon="@drawable/ic_faqs"/>
    <item
        android:title="@string/log_out"
        android:id="@+id/logOut"
        android:icon="@drawable/ic_logout"/>
    </group>

</menu>