<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.activity.RegisterActivity"
    android:id="@+id/relativeLayout"
    android:background="@drawable/gradient_drawable">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imgLoginFoodCartLogo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:src="@drawable/food_cart_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/white"
            android:hint="@string/name_min_3_characters"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtRegisterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dosis_light"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name should be of minimum 3 characters"
            android:textStyle="italic"
            android:textColor="@color/red"
            android:layout_marginLeft="18dp"
            android:id="@+id/txtInvalidName"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="15dp"
            android:background="@color/white"
            android:hint="@string/email_address"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/edtRegisterEmailAddress"
                android:maxLines="1"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Invalid"
            android:textStyle="italic"
            android:textColor="@color/red"
            android:layout_marginLeft="18dp"
            android:id="@+id/txtInvalidEmail"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="15dp"
            android:background="@color/white"
            android:hint="@string/mobile_number_10_digits"
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/edtRegisterMobileNum"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:maxLines="1"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number_should_be_of_10_numbers"
            android:textStyle="italic"
            android:textColor="@color/red"
            android:layout_marginLeft="18dp"
            android:id="@+id/txtInvalidNumber"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="15dp"
            android:background="@color/white"
            android:hint="@string/delivery_address"
            app:startIconDrawable="@drawable/ic_location">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/edtRegisterDeliveryAddress"
                android:maxLines="2"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_fill_the_required_fields"
            android:textStyle="italic"
            android:textColor="@color/red"
            android:layout_marginLeft="18dp"
            android:id="@+id/txtInvalidLocation"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="15dp"
            android:background="@color/white"
            android:hint="@string/password_min_4_characters"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/edtRegisterPassword"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="password should be of minimum 4 characters"
            android:textStyle="italic"
            android:textColor="@color/red"
            android:layout_marginLeft="18dp"
            android:id="@+id/txtInvalidPassword"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="15dp"
            android:background="@color/white"
            android:hint="@string/confirm_password"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:maxLines="1"
                android:id="@+id/edtRegisterConfirmPassword"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Incorrect Password"
            android:textStyle="italic"
            android:textColor="@color/red"
            android:layout_marginLeft="18dp"
            android:id="@+id/txtIncorrectConfirmation"
            />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/light_blue"
            android:fontFamily="@font/dosis_light"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="25sp"/>



    </LinearLayout>

</RelativeLayout>