<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.activity.ForgotPasswordActivity"
    android:background="@drawable/gradient_drawable">

    <LinearLayout
        android:id="@+id/linearLayoutForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgLoginFoodCartLogo"
            android:layout_width="match_parent"
            android:layout_height="184dp"
            android:src="@drawable/food_cart_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_registered_mobile_number_and_email_address_for_delicious_foods"
            android:fontFamily="@font/dosis_light"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="15dp"
            android:background="@color/white"
            android:hint="@string/mobile_number_10_digits"
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/edtMobileNum"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:inputType="number"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="15dp"
            android:background="@color/white"
            android:hint="@string/email_address"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:id="@+id/edtEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnNext"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="15dp"
            android:background="@color/light_blue"
            android:fontFamily="@font/dosis_light"
            android:text="@string/next"
            android:textSize="30sp"/>
    </LinearLayout>

</RelativeLayout>